--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
+  "engines": {
+    "node": "20.15.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
