--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ SMTP_HOST = "smtp.gmail.com"
 SMTP_PORT = 587
 SMTP_USER = terehovvlad29@gmail.com
 SMTP_PASSWORD = kito hepu rdvp lekz
-API_URL = https://bus-travel-4dba9713d4f4.herokuapp.com
+API_URL = https://bus-travel-4dba9713d4f4.herokuapp.com/
 CLIENT_URL = https://bus-travel-transfer.netlify.app/
