--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ JWT_ACCESS_SECRET = jwt-secret-key
 JWT_REFRESH_SECRET = jwt-refresh-key
 SMTP_HOST = "smtp.gmail.com"
 SMTP_PORT = 587
-SMTP_USER = terehovvlad29@gmail.com
-SMTP_PASSWORD = kito hepu rdvp lekz
+SMTP_USER = bustravel.mailservice@gmail.com
+SMTP_PASSWORD = fogo csxi gccr eocq
 API_URL = https://bus-travel-release-7e3983a29e39.herokuapp.com/
 CLIENT_URL = https://bus-travels.netlify.app/
