--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ SMTP_PORT = 587
 SMTP_USER = bustravel.mailservice@gmail.com
 SMTP_PASSWORD = fogo csxi gccr eocq
 API_URL = https://bus-travel-release-7e3983a29e39.herokuapp.com/
-CLIENT_URL = https://bus-travels.netlify.app/
+CLIENT_URL = https://bustravel.co.ua/
